--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Website</title>
+	<title>My Bio</title>
 
 </head>
 <body>
-<h1 style="color:green;"><border>WELCOME TO MY WEBSITE</border></h1>
+<h1 style="color:green;TEXT ALIGN CENTER"><boRDER>WELCOME TO MY WEBSITE</border></h1>
 <p></p>
 <P>Halo! semuanya. Welcome to my website. Di website kali ini aku akan menukis biodata serta teratng hobiku. Selamat membaca:)</P>
 <p></p>
-<P>Nama 			: Rahma Sabrina Ahmad</P>
-<P>Tempat tinggal	: BOGOR</P>
-<p>Tempat, tanggal lahir	: BOGOR, 12 Agustus 2003
-<p>Warna kesukaan 	: Biru</p>
-<P>Email			: rahmasabrina@gmail.com</P></body>
-<P>Hobi 			: Membaca novel 
+<li>Nama 			: Rahma Sabrina Ahmad</li>
+<li>Tempat tinggal		: BOGOR</li>
+<li>Tempat, tanggal lahir	: BOGOR, 12 Agustus 2003</li>
+<li>Warna kesukaan 		: Biru</li>
+<li>Email			: rahmasabrina@gmail.com</li></body>
+<li>Hobi 			: Membaca novel </li></body>
 <p> </p>
 
 
-	<p>Membaca novel adalah hal aku lakukan ketika sedang waktu luang. Hasil itu membuat pikiran dalam pikiranku tidak terasa lelah. Kadang aku membaca novel dengan isi topik yang berat. Dengan itu aku merasa tertantang untuk mengerti pesan apa yang dituliskan pengarang dalam novel. </p>
-<p>Ada beberapa orang yang tidak suka membaca novel. Salah satu faktornya, jalan cerita yang panjang dengan buku yang tebal. Sedangkan dengan hal itu yang membuat aku menyukai novel. Ketegangan alur ceritanya yang membuat otakku berputar 6 keliling.</p>
+	<p>Membaca novel adalah hal aku lakukan ketika sedang waktu luang. Hal itu membuat pikiran dalam kepalaku tidak terasa bosan. Biasanya aku membaca saat istirahat sekolah atau sedang libur. That's my provisious time. Novel yang biasa aku baca adalah novel fiksi. Ya dengan fiksi aku dapat berimajinasi luas dengan ceritanya</p>
+<p>Ada beberapa orang yang tidak suka membaca novel. Salah satu faktornya, jalan cerita yang panjang dengan buku yang tebal. Sangat disayangkan padahal bayak hal yang menarik dari novel. Dan kadang novel memberi ilmu yang belum kita tahu </p>
 <IMAGE src="index.jpeg" width="500" height="333">
 <p> Novel Bumi termasuk novel yang aku suka lho.</p>
 <p>Share and komen ya </P>
