--- a/3.html
+++ b/3.html
@@ -25,6 +25,7 @@
 <p class="biasa">Ada beberapa orang yang tidak suka membaca novel. Salah satu faktornya, jalan cerita yang panjang dengan buku yang tebal. Sangat disayangkan padahal bayak hal yang menarik dari novel. Dan kadang novel memberi ilmu yang belum kita tahu </p>
 <IMAGE src="index.jpeg" width="500" height="333">
 <p> Novel Bumi termasuk novel yang aku suka lho.</p>
+<p> Aku juga mengupload video tentang cara membuat website ini linknya https://youtu.be/GbEOsphUbO8 </P>
 <p>Share and komen ya </P>
 
 </html>
