--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@ Share and komen ya
 </p>
 </div>
 </body>
-<link rel="stylesheet"href="Latihan-HTML"/style 2.css"/>
+<link rel="stylesheet"href="Latihan-HTML/style 2.css"/>
 </html>
